logs.log
  File "imgCap.py", line 1
    mport cv2 as cv
            ^
SyntaxError: invalid syntax
Reinitialized existing Git repository in /home/pi/Documents/VegetableImages/.git/
